--- a/booking/main2.html
+++ b/booking/main2.html
@@ -13,6 +13,8 @@
             padding: 0;
             box-sizing: border-box;
             color: #555;
+            font-family: 'Lato', sans-serif;
+            font-family: Microsoft JhengHei;
         }
 
         .login_main {
