--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>選單</title>
     <style>
+        body{
+            font-family: 'Lato', sans-serif;
+            font-family: Microsoft JhengHei;
+        }
         .btn {
             width: 275px;
             height: 50px;
