update selest style

--- a/booking/main2_old.html
+++ b/booking/main2_old.html
@@ -6,10 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <script src="https://formstone.it/demo/js/modernizr.js?v=1.4.21"></script>
-    <link rel="stylesheet" href="https://formstone.it/demo/css/site.css?v=1.4.21">
-    <script src="https://formstone.it/demo/js/site.js?v=1.4.21"></script>
-
     <title>成果行銷 | 預約會議室</title>
     <style>
         body {
@@ -60,7 +56,6 @@
         .login_header_logout:hover {
             color: #0d6efd;
         }
-
         .login_form_logo {
             width: 100px;
             height: 102px;
@@ -71,7 +66,6 @@
         .login_form_logo img {
             width: 100%;
         }
-
         /*  ==========================  footer   ==========================  */
         .login_footer {
             position: relative;
@@ -177,11 +171,9 @@
             border-style: solid;
             border-width: 0;
         }
-
-        thead th {
+        thead th{
             border-color: black;
         }
-
         th {
             text-align: inherit;
         }
@@ -286,8 +278,7 @@
                     <div class="login_header_title">
                         <div class="login_form_logo">
                             <img src="../img/logo1.png" alt="">
-                        </div>成果行銷 | 預約會議室
-                    </div>
+                        </div>成果行銷 | 預約會議室</div>
                     <div class="login_header_logout">登出</div>
                 </div>
             </div>
@@ -295,7 +286,7 @@
                 <div class="content-wrap content_all">
                     <div class="container-fluid px-5 clearfix content_wrap_all">
                         <div class="booking_aside">
-                            會議室：<select name="dropdown" class="dropdown">
+                            會議室：<select name="room">
                                 <option>紐約</option>
                                 <option>倫敦</option>
                                 <option>深圳</option>
@@ -1055,9 +1046,7 @@
         </div>
     </div>
     <script>
-$(".dropdown").dropdown({
-  label: "Select an Item"
-});
+
     </script>
 </body>
 
