--- a/booking/main1.html
+++ b/booking/main1.html
@@ -21,6 +21,10 @@
             font-family: Microsoft JhengHei;
         }
 
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
         .login_main {
             margin: 0 auto;
         }
@@ -234,7 +238,7 @@
         }
 
         .booking_btn {
-            width: 180px;
+            width: 185px;
             height: 40px;
             background: #0d6efd;
             border-radius: 5px;
