--- a/booking/main2.html
+++ b/booking/main2.html
@@ -21,8 +21,17 @@
             font-family: Microsoft JhengHei;
         }
 
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
         .login_main {
             margin: 0 auto;
+            background-image: url(../img/sky_bg_dark.png);
+            background-repeat: no-repeat;
+            background-position: left bottom;
+            background-size: cover;
+            background-attachment: fixed;
         }
 
         .login_header {
@@ -40,7 +49,7 @@
         .login_header_title {
             height: 100px;
             font-weight: 700;
-            font-size: 32px;
+            font-size: 30px;
             line-height: 100px;
             color: #888;
             margin-left: 50px;
@@ -77,28 +86,13 @@
             position: relative;
         }
 
-        .login_footer_line1 {
-            position: absolute;
-            width: 100%;
-            height: 5px;
-            bottom: 75px;
-            background: rgba(0, 0, 0, 0.55);
-        }
-
-        .login_footer_line2 {
-            position: absolute;
-            width: 100%;
-            height: 15px;
-            bottom: 60px;
-            background: #282828;
-        }
-
         .login_footer_txt {
             position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 60px;
-            background: #000000;
+            bottom: 10px;
+            right: 30px;
+            /* width: 100%; */
+            height: 22px;
+            /* background: #000000; */
         }
 
         /* =================== 行事曆的css 套用後可刪除 ======================*/
@@ -232,7 +226,8 @@
         /* =================== 其他新增的css 套用後須留存 ======================*/
         .content_all {
             /* border: 1px solid red; */
-            margin: 150px auto 130px;
+            margin: 0px auto;
+            padding: 150px 0px;
             width: 95%;
         }
 
@@ -247,12 +242,12 @@
             border-radius: 10px;
             padding: 10px;
             position: fixed;
-            background-color: #FFFFFF;
+            /* background-color: #FFFFFF; */
             /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
         }
 
         .booking_btn {
-            width: 180px;
+            width: 185px;
             height: 40px;
             background: #0d6efd;
             border-radius: 5px;
@@ -272,10 +267,26 @@
         }
 
         .table_main {
-            /* border: 1px solid blue; */
             width: 80%;
+            background-color: #ffffffb8;
+            border-radius: 10px;
         }
 
+        thead tr th {
+            border-color: #888;
+            
+        }
+        th{
+            font-size: 26px;
+        }
+        .table> tbody>tr:last-child>*{
+            border-bottom-width: 0px;
+            padding-bottom: 30px;
+        }
+        .thead_tr th{
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
         /* =================== 更改select 套用後須留存 ======================*/
         .booking_room {
             display: flex;
@@ -404,10 +415,10 @@
                             <button onclick="checkbooking();" class="booking_btn">BOOKING</button><img
                                 src="v2/images/loading.gif" id="imgloading1" style="width:30px; display:none;">
                         </div>
-                        <div style="width: 220px;margin-right: 20px;border-right: 1px solid rgb(0 0 0 / 25%);"></div>
+                        <div style="width: 220px;margin-right: 30px;border-right: 1px solid rgb(0 0 0 / 25%);"></div>
                         <table class="table text-center fs-2 table_main">
                             <thead>
-                                <tr class="">
+                                <tr class="thead_tr">
                                     <th><a href="?m=04&amp;y=2022">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#888"
                                                 class="bi bi-caret-left-fill" viewBox="0 0 16 16">
@@ -1102,10 +1113,10 @@
             </section>
             <div>
                 <div class="login_footer">
-                    <div class="login_footer_line1"></div>
-                    <div class="login_footer_line2"></div>
+                    <!-- <div class="login_footer_line1"></div>
+                    <div class="login_footer_line2"></div> -->
                     <div class="login_footer_txt">
-                        <div style="margin-left: 5%;font-size: 14px;line-height: 60px;color: rgba(255, 255, 255, 0.4);">
+                        <div>
                             Copyrights ©
                             2022 All Rights Reserved by 成果行銷</div>
                     </div>
