--- a/booking/main3.html
+++ b/booking/main3.html
@@ -6,12 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/bootstrap-select/1.12.4/css/bootstrap-select.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap-select/1.12.4/js/i18n/defaults-zh_CN.min.js"></script>
+    <script src="https://formstone.it/demo/js/modernizr.js?v=1.4.21"></script>
+    <link rel="stylesheet" href="https://formstone.it/demo/css/site.css?v=1.4.21">
+    <script src="https://formstone.it/demo/js/site.js?v=1.4.21"></script>
+
     <title>成果行銷 | 預約會議室</title>
     <style>
         body {
@@ -23,8 +21,17 @@
             font-family: Microsoft JhengHei;
         }
 
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
         .login_main {
             margin: 0 auto;
+            background-image: url(../img/sky_bg_dark.png);
+            background-repeat: no-repeat;
+            background-position: left bottom;
+            background-size: cover;
+            background-attachment: fixed;
         }
 
         .login_header {
@@ -42,7 +49,7 @@
         .login_header_title {
             height: 100px;
             font-weight: 700;
-            font-size: 32px;
+            font-size: 30px;
             line-height: 100px;
             color: #888;
             margin-left: 50px;
@@ -79,28 +86,13 @@
             position: relative;
         }
 
-        .login_footer_line1 {
-            position: absolute;
-            width: 100%;
-            height: 5px;
-            bottom: 75px;
-            background: rgba(0, 0, 0, 0.55);
-        }
-
-        .login_footer_line2 {
-            position: absolute;
-            width: 100%;
-            height: 15px;
-            bottom: 60px;
-            background: #282828;
-        }
-
         .login_footer_txt {
             position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 60px;
-            background: #000000;
+            bottom: 10px;
+            right: 30px;
+            /* width: 100%; */
+            height: 22px;
+            /* background: #000000; */
         }
 
         /* =================== 行事曆的css 套用後可刪除 ======================*/
@@ -180,10 +172,6 @@
             border-width: 0;
         }
 
-        thead th {
-            border-color: black;
-        }
-
         th {
             text-align: inherit;
         }
@@ -234,7 +222,8 @@
         /* =================== 其他新增的css 套用後須留存 ======================*/
         .content_all {
             /* border: 1px solid red; */
-            margin: 150px auto 130px;
+            margin: 0 auto;
+            padding: 135px 0px;
             width: 95%;
         }
 
@@ -245,24 +234,24 @@
         }
 
         .booking_aside {
-            /* border: 1px solid rgb(235, 233, 233); */
+            border: 1px solid rgb(235, 233, 233);
             border-radius: 10px;
-            padding: 10px;
+            padding: 20px 15px;
             position: fixed;
-            background-color: #FFFFFF;
-            /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
+            background-color: #e2f4fc;
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         }
 
         .booking_btn {
-            width: 140px;
-            height: 30px;
+            width: 185px;
+            height: 40px;
             background: #0d6efd;
             border-radius: 5px;
             border: 0px;
             filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
             font-weight: 600;
-            font-size: 12px;
-            line-height: 24px;
+            font-size: 16px;
+            line-height: 40px;
             color: #FFFFFF;
             margin-top: 20px;
             cursor: pointer;
@@ -274,17 +263,68 @@
         }
 
         .table_main {
-            /* border: 1px solid blue; */
             width: 80%;
+            background-color: #ffffffb8;
+            border-radius: 10px;
         }
 
-        /* =================== 更改select 套用後須留存 ======================*/
-        .bootstrap-select>.dropdown-toggle {
-            width: 100px;
+        thead tr th {
+            border-color: #888;
+            
         }
-        .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
-    width: 100px;
-}
+        th{
+            font-size: 26px;
+        }
+        .table> tbody>tr:last-child>*{
+            border-bottom-width: 0px;
+            padding-bottom: 30px;
+        }
+        .thead_tr th{
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
+        /* =================== 更改select 套用後須留存 ======================*/
+        .booking_room {
+            display: flex;
+            padding: 3px;
+        }
+
+        .booking_title {
+            height: 40px;
+            line-height: 40px;
+        }
+
+        .fs-dropdown {
+            max-width: 100%;
+            width: 115px;
+        }
+
+        .fs-dropdown.fs-light .fs-dropdown-selected {
+            border-radius: 7px;
+        }
+
+        .no-touchevents .fs-dropdown.fs-light .fs-dropdown-item:hover {
+            background-color: #8dc8ff;
+        }
+
+        .fs-light.fs-dropdown-open .fs-dropdown-options {
+            border-radius: 0px 0px 7px 7px;
+        }
+
+        .fs-dropdown.fs-light .fs-dropdown-item_selected,
+        .no-touchevents .fs-dropdown.fs-light .fs-dropdown-item_selected:hover {
+            background-color: #0d6efd;
+            color: #fff;
+        }
+
+        .fs-dropdown.fs-light.fs-dropdown-focus .fs-dropdown-selected,
+        .no-touchevents .fs-dropdown.fs-light .fs-dropdown-selected:hover {
+            background-color: #8dc8ff;
+        }
+
+        .booking_date .fs-dropdown {
+            width: 131px;
+        }
     </style>
 </head>
 
@@ -305,60 +345,77 @@
                 <div class="content-wrap content_all">
                     <div class="container-fluid px-5 clearfix content_wrap_all">
                         <div class="booking_aside">
-                            會議室：<select class="selectpicker selectpicker_1" name="room">
-                                <option>紐約</option>
-                                <option>倫敦</option>
-                                <option>深圳</option>
-                                <option>日本</option>
-                                <option>挪威</option>
-                                <option>上海</option>
-                            </select><br>
-                            預約人：<select name="org">
-                                <option value="1">追聚行銷</option>
-                                <option value="2">法律顧問 </option>
-                            </select><br>
-                            日期：<select name="day">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                                <option value="11">11</option>
-                                <option value="12">12</option>
-                                <option value="13">13</option>
-                                <option value="14">14</option>
-                                <option value="15">15</option>
-                                <option value="16">16</option>
-                                <option value="17">17</option>
-                                <option value="18">18</option>
-                                <option value="19">19</option>
-                                <option value="20">20</option>
-                                <option value="21">21</option>
-                                <option value="22">22</option>
-                                <option value="23">23</option>
-                                <option value="24">24</option>
-                                <option value="25">25</option>
-                                <option value="26">26</option>
-                                <option value="27">27</option>
-                                <option value="28">28</option>
-                                <option value="29">29</option>
-                                <option value="30">30</option>
-                                <option value="31">31</option>
-                            </select><br>
-                            開始：<input name="starttime" type="text" size="10" placeholder="ex:10:00"><br>
-                            結束：<input name="endtime" type="text" size="10" placeholder="ex:10:30"><br>
+                            <div class="booking_room">
+                                <div class="booking_title">會議室：</div>
+                                <select name="room" class="dropdown">
+                                    <option>紐約</option>
+                                    <option>倫敦</option>
+                                    <option>深圳</option>
+                                    <option>日本</option>
+                                    <option>挪威</option>
+                                    <option>上海</option>
+                                </select>
+                            </div>
+                            <div class="booking_room">
+                                <div class="booking_title">預約人：</div>
+                                <select name="org" class="dropdown1">
+                                    <option value="1">追聚行銷</option>
+                                    <option value="2">法律顧問 </option>
+                                </select>
+                            </div>
+                            <div class="booking_room booking_date">
+                                <div class="booking_title">日期：</div>
+                                <select name="day" class="dropdown2">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
+                                    <option value="13">13</option>
+                                    <option value="14">14</option>
+                                    <option value="15">15</option>
+                                    <option value="16">16</option>
+                                    <option value="17">17</option>
+                                    <option value="18">18</option>
+                                    <option value="19">19</option>
+                                    <option value="20">20</option>
+                                    <option value="21">21</option>
+                                    <option value="22">22</option>
+                                    <option value="23">23</option>
+                                    <option value="24">24</option>
+                                    <option value="25">25</option>
+                                    <option value="26">26</option>
+                                    <option value="27">27</option>
+                                    <option value="28">28</option>
+                                    <option value="29">29</option>
+                                    <option value="30">30</option>
+                                    <option value="31">31</option>
+                                </select>
+                            </div>
+                            <div class="booking_room">
+                                <div class="booking_title">開始：</div>
+                                <input name="starttime" type="text" size="10" placeholder=" ex:10:00"
+                                    style="border:1px solid;border-radius: 7px; width: 131px;">
+                            </div>
+                            <div class="booking_room">
+                                <div class="booking_title">結束：</div>
+                                <input name="endtime" type="text" size="10" placeholder=" ex:10:30"
+                                    style="border:1px solid;border-radius: 7px; width: 131px;">
+                            </div>
                             <button onclick="checkbooking();" class="booking_btn">BOOKING</button><img
                                 src="v2/images/loading.gif" id="imgloading1" style="width:30px; display:none;">
                         </div>
-                        <div style="width: 180px;margin-right: 20px;border-right: 1px solid rgb(0 0 0 / 25%);"></div>
+                        <div style="width: 220px;margin-right: 20px;"></div>
                         <table class="table text-center fs-2 table_main">
                             <thead>
-                                <tr class="">
+                                <tr class="thead_tr">
                                     <th><a href="?m=04&amp;y=2022">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#888"
                                                 class="bi bi-caret-left-fill" viewBox="0 0 16 16">
@@ -1053,17 +1110,26 @@
             </section>
             <div>
                 <div class="login_footer">
-                    <div class="login_footer_line1"></div>
-                    <div class="login_footer_line2"></div>
+                    <!-- <div class="login_footer_line1"></div>
+                    <div class="login_footer_line2"></div> -->
                     <div class="login_footer_txt">
-                        <div style="margin-left: 5%;font-size: 14px;line-height: 60px;color: rgba(255, 255, 255, 0.4);">
-                            Copyrights ©
-                            2022 All Rights Reserved by 成果行銷</div>
+                        <div>Copyrights © 2022 All Rights Reserved by 成果行銷</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        $(".dropdown").dropdown({
+            label: "紐約"
+        });
+        $(".dropdown1").dropdown({
+            label: "追劇行銷"
+        });
+        $(".dropdown2").dropdown({
+            label: "1"
+        });
+    </script>
 </body>
 
 </html>
