--- a/index.html
+++ b/index.html
@@ -44,28 +44,31 @@
         <div>
             <h1>登入：</h1>
             <div class="btn">
-                <a href="./login/login1.html">樣式一</a>
+                <a href="./login/login2.html">樣式一</a>
             </div>
             <div class="btn">
-                <a href="./login/login2.html">樣式二</a>
+                <a href="./login/login3.html">樣式二</a>
             </div>
             <div class="btn">
-                <a href="./login/login3.html">樣式三</a>
+                <a href="./login/login4.html">樣式三</a>
             </div>
             <div class="btn">
-                <a href="./login/login4.html">樣式四</a>
+                <a href="./login/login5.html">樣式四</a>
             </div>
-            <div class="btn">
+            <!-- <div class="btn">
                 <a href="./login/login5.html">樣式五</a>
-            </div>
+            </div> -->
         </div>
         <div>
             <h1>日曆：</h1>
             <div class="btn">
-                <a href="./booking/main1.html">樣式一</a>
+                <a href="./booking/main2.html">樣式一</a>
             </div>
             <div class="btn">
-                <a href="./booking/main2.html">樣式二</a>
+                <a href="./booking/main3.html">樣式二</a>
+            </div>
+            <div class="btn">
+                <a href="./booking/main4.html">樣式二</a>
             </div>
         </div>
     </div>
