--- a/booking/main4.html
+++ b/booking/main4.html
@@ -220,7 +220,7 @@
         .booking_aside {
             /* border: 1px solid rgb(235, 233, 233); */
             border-radius: 10px;
-            padding: 20px 15px;
+            padding: 13px 15px 20px;
             display: flex;
             width: 80%;
             margin: 15px auto 0px;
@@ -238,7 +238,7 @@
             font-size: 16px;
             line-height: 40px;
             color: #FFFFFF;
-            margin-top: 42px;
+            margin-top: 40px;
             margin-left: 42px;
             cursor: pointer;
         }
@@ -277,7 +277,7 @@
         /* =================== 更改select 套用後須留存 ======================*/
         .booking_room {
             /* display: flex; */
-            padding: 3px 5px;
+            padding: 0px 5px;
         }
 
         .booking_title {
