update main2&3 bg img

--- a/booking/main3.html
+++ b/booking/main3.html
@@ -229,6 +229,7 @@
 
         .content_wrap_all {
             display: flex;
+            justify-content: space-between;
             /* border: 1px solid black; */
             margin: 0px auto;
         }
