--- a/booking/main2.html
+++ b/booking/main2.html
@@ -27,7 +27,7 @@
 
         .login_main {
             margin: 0 auto;
-            background-image: url(../img/sky_bg_dark.png);
+            background-image: url(../img/sky_bg_dark3.png);
             background-repeat: no-repeat;
             background-position: left bottom;
             background-size: cover;
