update index title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>選單</title>
+    <title>預約會議室樣式選單</title>
     <style>
         body{
             font-family: 'Lato', sans-serif;
@@ -20,6 +20,7 @@
             text-align: center;
             margin: 20px 10px;
         }
+
         .btn:hover{
             background: #485FF1;
             transition: .4s;
