--- a/booking/main3.html
+++ b/booking/main3.html
@@ -9,7 +9,6 @@
     <script src="https://formstone.it/demo/js/modernizr.js?v=1.4.21"></script>
     <link rel="stylesheet" href="https://formstone.it/demo/css/site.css?v=1.4.21">
     <script src="https://formstone.it/demo/js/site.js?v=1.4.21"></script>
-
     <title>成果行銷 | 預約會議室</title>
     <style>
         body {
@@ -19,6 +18,16 @@
             color: #555;
             font-family: 'Lato', sans-serif;
             font-family: Microsoft JhengHei;
+        }
+
+        #loading {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 999;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
         }
 
         ::-webkit-scrollbar {
@@ -271,19 +280,23 @@
 
         thead tr th {
             border-color: #888;
-            
+
         }
-        th{
+
+        th {
             font-size: 26px;
         }
-        .table> tbody>tr:last-child>*{
+
+        .table>tbody>tr:last-child>* {
             border-bottom-width: 0px;
             padding-bottom: 30px;
         }
-        .thead_tr th{
+
+        .thead_tr th {
             padding-top: 20px;
             padding-bottom: 20px;
         }
+
         /* =================== 更改select 套用後須留存 ======================*/
         .booking_room {
             display: flex;
@@ -327,9 +340,25 @@
             width: 131px;
         }
     </style>
+    <script>
+        window.addEventListener('load', function () {
+            document.getElementById('loading').style = 'display : none';
+            $(".dropdown").dropdown({
+                label: "紐約"
+            });
+            $(".dropdown1").dropdown({
+                label: "追劇行銷"
+            });
+            $(".dropdown2").dropdown({
+                label: "1"
+            });
+        });
+    </script>
 </head>
 
 <body>
+    <div id="loading">
+    </div>
     <div>
         <div class="login_main">
             <div class="login_header_relative">
@@ -1120,17 +1149,6 @@
             </div>
         </div>
     </div>
-    <script>
-        $(".dropdown").dropdown({
-            label: "紐約"
-        });
-        $(".dropdown1").dropdown({
-            label: "追劇行銷"
-        });
-        $(".dropdown2").dropdown({
-            label: "1"
-        });
-    </script>
 </body>
 
 </html>
