--- a/booking/main4.html
+++ b/booking/main4.html
@@ -20,6 +20,16 @@
             font-family: Microsoft JhengHei;
         }
 
+        #loading {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 999;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+        }
+
         ::-webkit-scrollbar {
             display: none;
         }
@@ -265,7 +275,8 @@
 
         .table_main {
             width: 84%;
-            background-color: #cfcfda7b;;
+            background-color: #cfcfda7b;
+            ;
             border-radius: 10px;
             margin: 0 auto;
         }
@@ -288,6 +299,7 @@
             padding-top: 20px;
             padding-bottom: 20px;
         }
+
         thead,
         tbody,
         tfoot,
@@ -298,6 +310,7 @@
             border-style: solid;
             border-width: 0;
         }
+
         /* =================== 更改select 套用後須留存 ======================*/
         .booking_room {
             /* display: flex; */
@@ -341,9 +354,25 @@
             width: 115px;
         }
     </style>
+    <script>
+        window.addEventListener('load', function () {
+            document.getElementById('loading').style = 'display : none';
+            $(".dropdown").dropdown({
+                label: "紐約"
+            });
+            $(".dropdown1").dropdown({
+                label: "追劇行銷"
+            });
+            $(".dropdown2").dropdown({
+                label: "1"
+            });
+        });
+    </script>
 </head>
 
 <body>
+    <div id="loading">
+    </div>
     <div>
         <div class="login_main">
             <div class="login_header_relative">
@@ -1135,17 +1164,6 @@
             </div>
         </div>
     </div>
-    <script>
-        $(".dropdown").dropdown({
-            label: "紐約"
-        });
-        $(".dropdown1").dropdown({
-            label: "追劇行銷"
-        });
-        $(".dropdown2").dropdown({
-            label: "1"
-        });
-    </script>
 </body>
 
 </html>
