--- a/login/login4.html
+++ b/login/login4.html
@@ -15,6 +15,16 @@
             font-family: Microsoft JhengHei;
         }
 
+        #loading {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 999;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+        }
+
         .login_main {
             width: 100%;
             height: 100vh;
@@ -61,12 +71,14 @@
             background-size: cover;
             background-position: center;
         }
-        .login_form_div{
+
+        .login_form_div {
             height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
         }
+
         .login_form_content {
             position: absolute;
             left: 0;
@@ -124,10 +136,12 @@
             margin-top: 20px;
             cursor: pointer;
         }
-        .btn_login:hover{
+
+        .btn_login:hover {
             filter: drop-shadow(0px 0px 0px rgba(0, 0, 0, 0));
             background: #0121ED;
         }
+
         .form-control {
             display: block;
             width: 262px;
@@ -164,9 +178,16 @@
             padding-top: 1.625rem;
         }
     </style>
+    <script>
+        window.addEventListener('load', function () {
+            document.getElementById('loading').style = 'display : none';
+        });
+    </script>
 </head>
 
 <body>
+    <div id="loading">
+    </div>
     <div>
         <div class="login_main">
             <div class="login_aside">
