--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <div>
             <h1>登入：</h1>
             <div class="btn">
-                <a href="./login/login2.html">樣式一 - yellow</a>
+                <a href="./login/login2.html">樣式一</a>
             </div>
-            <!-- <div class="btn">
-                <a href="./login/login3.html">樣式二</a>
-            </div> -->
             <div class="btn">
-                <a href="./login/login4.html">樣式二 - purple</a>
+                <a href="./login/login3.html">樣式二</a>
             </div>
-            <!-- <div class="btn">
+            <div class="btn">
+                <a href="./login/login4.html">樣式三</a>
+            </div>
+            <div class="btn">
                 <a href="./login/login5.html">樣式四</a>
-            </div> -->
+            </div>
             <!-- <div class="btn">
                 <a href="./login/login5.html">樣式五</a>
             </div> -->
